# structures

./: .gitignore  .travis.yml  CHANGELOG.markdown  COLA.hs  Control-Concurrent-Deque.html  Data-Vector-Array.html  Data-Vector-Bit.html  Data-Vector-Bloom-Mutable.html  Data-Vector-Bloom-Util.html  Data-Vector-Bloom.html  Data-Vector-Heap.html  Data-Vector-Map-Fusion.html  Data-Vector-Map-Tuning.html  Data-Vector-Map.html  README.markdown  Tensor.hs  doc-index.html  index-frames.html  index.html  mini_Control-Concurrent-Deque.html  mini_Data-Vector-Array.html  mini_Data-Vector-Bit.html  mini_Data-Vector-Bloom-Mutable.html  mini_Data-Vector-Bloom-Util.html  mini_Data-Vector-Bloom.html  mini_Data-Vector-Heap.html  mini_Data-Vector-Map-Fusion.html  mini_Data-Vector-Map-Tuning.html  mini_Data-Vector-Map.html  structures.cabal  structures.haddock
benchmarks/: MapBench.hs  inserts.hs  lookups.hs  misc.hs  persistentLookup.hs
cbits/: evil.cmm  prefetch.c
src/: Control-Concurrent-Deque.html  Data-Vector-Array.html  Data-Vector-Bit.html  Data-Vector-Bloom-Mutable.html  Data-Vector-Bloom-Util.html  Data-Vector-Bloom.html  Data-Vector-Heap.html  Data-Vector-Map-Fusion.html  Data-Vector-Map-Tuning.html  Data-Vector-Map.html
src/Control/Concurrent/: Deque.hs
src/Data/Vector/: Array.hs  Bit.hs  Bloom.hs  Heap.hs  Map.hs  Prefetch.hs  Set.hs  Slow.hs
src/Data/Vector/Bloom/: Mutable.hs  Util.hs
src/Data/Vector/Map/: Deamortized.hs  Ephemeral.hs  Fusion.hs  Heap.hs  Overmars.hs  Persistent.hs  PersistentlyAmortized.hs  Tuned.hs  Tuning.hs
src/Data/Vector/Set/: Fusion.hs
tests/: hunit.hs  properties.hs
